plonetheme/onegovbear/theme/scss/simplelayout.scss
$toolbar-bg-color: $gray-dark;
$action-bg-color: $gray-dark;
$action-bg-color-hover: $gray-light;

$column-bg-color: $gray-light;

$block-placeholder-bg-color: $gray;

$layout-placeholder-bg-color: $block-placeholder-bg-color;
$layout-placeholder-border-size: 1px;
$layout-placeholder-border-style: dotted;
$layout-placeholder-border-color: $gray-dark;

$simplelayout-gutter-width: $gutter-width !default;
$simplelayout-columns: $columns !default;

$simplelayout-block-glow-color: transparentize($primary-color, .6);

ul[class^="sl-toolbar"] {
  background-color: $toolbar-bg-color;
  border-radius: $border-radius;
  @include transition(opacity .3s ease-out);
  z-index: 100;
}

.sl-simplelayout {
  display: block;
  @include clearfix;
  .layout-placeholder {
    background-color: $layout-placeholder-bg-color;
    border: $layout-placeholder-border-size $layout-placeholder-border-style $layout-placeholder-border-color;
  }
}

.sl-toolbox {
  a {
    font-size: 14px;
    font-weight: normal;
  }
}

.sl-block {
  @include clearfix();

  .sl-block-content {
    img {
      max-width: 100%;
    }
  }
}

.sl-layout {
  @include clearfix();
  .block-placeholder {
    background-color: $block-placeholder-bg-color;
  }
}

.sl-simplelayout {
  .layout-placeholder {
    background-color: $layout-placeholder-bg-color;
    border: $layout-placeholder-border-size $layout-placeholder-border-style $layout-placeholder-border-color;
  }
}

// Special handling for blocks in the side par
#column-sidebar {
    .sl-column {
        background-color: transparent;
        .sl-block {
            background-color: transparent;
            margin-bottom: 0;
        }
    }
}

.sl-layout-dragging {
  .sl-simplelayout {
    box-sizing: border-box;
    padding: 0;
  }

.SimplelayoutPortlet {
    .sl-column:empty {
      border: none;
    }
  }
}

// If user is permitted to edit the simplelayout page
.documentEditable,  .SimplelayoutPortlet{
  .sl-column:empty {
    -moz-box-shadow: 0 0 5px 1px #000;
    -webkit-box-shadow: 0 0 5px 1px #000;
    box-shadow: 0 0 5px 1px #000;
  }
  .sl-block {
    @include transition(box-shadow .3s ease-out);
    &:hover {
      @include boxshadow(0 0 20px 0 $simplelayout-block-glow-color);
    }
  }
}

.golden-ratio {
  $golden-ratio: 61.803398875%;
  $gutter-width-relative: 100% / $gridsystem-width * $simplelayout-gutter-width * 2;
  $large-part: $golden-ratio - ($gutter-width-relative / 2);
  $small-part: 100 - $golden-ratio - ($gutter-width-relative / 2);

  width: 100%;

  @media #{$screen-XXS} {
    .sl-column {
      &:nth-child(1) {
        width: $large-part;
        margin-right: $gutter-width-relative;
      }

      &:nth-child(2) {
        width: $small-part;
      }
    }

    &.layout-reverse .sl-column {

      &:nth-child(1) {
        width: $small-part;
      }

      &:nth-child(2) {
        width: $large-part;
      }
    }
  }
}

.layout13 {
  $gutter-width-relative: 100% / $gridsystem-width * $simplelayout-gutter-width * 2;
  $large-part: (25% - $gutter-width-relative + ($gutter-width-relative / 4)) * 3 + ($gutter-width-relative * 2);
  $small-part: 25% - $gutter-width-relative + ($gutter-width-relative / 4);

  .sl-column {
    @media #{$screen-XXS} {
      &:nth-child(1) {
        width: $large-part;
      }

      &:nth-child(2) {
        width: $small-part;
      }
    }
  }

  &.layout-reverse .sl-column {

    &:nth-child(1) {
      width: $small-part;
    }

    &:nth-child(2) {
      width: $large-part;
    }
  }
}

.layout112 {
  $gutter-width-relative: 100% / $gridsystem-width * $simplelayout-gutter-width * 2;
  $gutter-width: $simplelayout-gutter-width * 2;
  .sl-column {
    &:nth-child(1) {
      @include floatgrid(4);
    }

    &:nth-child(2) {
      @include floatgrid(4);
    }

    &:nth-child(3) {
      @include floatgrid(2, $offset: 1);
    }
  }

  &.layout-reverse .sl-column {
    @include floatgrid(4, $offset: 3);

    &:nth-child(1) {
      @include floatgrid(2);
    }

    // floatgrid is no yet (flex)ible enough :-)
    @media #{$screen-XXS} {
      &:nth-child(2){
        margin-right: $gutter-width-relative;
      }
      &:nth-child(3){
        margin-right: 0;
      }

    }

  }
}

.sl-column {
  $gutter-width: 100% / $gridsystem-width * $simplelayout-gutter-width * 2;
  float: left;
  box-sizing: border-box;
  @for $i from 1 through $simplelayout-columns {
    &.sl-col-#{$i} {
      margin-right: 0;
      width: 100%;

      &:last-of-type {
        margin-right: 0 !important;
      }
    }
  }

  @include screen-small {
    @for $i from 1 through $simplelayout-columns {
      &.sl-col-#{$i} {
        margin-right: $gutter-width;
        width: 100% / ($i / 2) - ($gutter-width / ($i / 2));
        &:nth-of-type(#{$i / 2}n+#{$i / 2}) {
          margin-right: 0;
        }
      }
      &.sl-col-1 {
        width: 100%;
      }
      &.sl-col-2 {
        width: 100%;
      }
    }
  }

  @include screen-medium {
    @for $i from 1 through $simplelayout-columns {
      &.sl-col-#{$i} {
        margin-right: $gutter-width;
        width: 100% / $i - $gutter-width + $gutter-width / $i;

        &:nth-of-type(#{$i / 2}n+#{$i / 2}) {
          margin-right: $gutter-width;
        }

        &:last-of-type {
          margin-right: 0 !important;
        }
      }
    }
  }

  @include print {
    @for $i from 1 through $simplelayout-columns {
      &.sl-col-#{$i} {
        margin-right: 0 !important;
        width: 100% !important;

        &:nth-of-type(#{$i / 2}n+#{$i / 2}) {
          margin-right: 0 !important;
        }

        &:last-of-type {
          margin-right: 0 !important;
        }
      }
    }
  }
}

.layout121 {
  $gutter-width: $simplelayout-gutter-width * 2;
  .sl-column {
    @include floatgrid(4, $offset: 0);

    &:nth-child(2) {
      @include floatgrid(2, $offset: 1);
    }
  }
}

.icons-on .sl-simplelayout .sl-block-content .colorboxLink {
  pointer-events: none;

  @include screen-medium() {
    pointer-events: auto;
  }

  &:before{
    margin-bottom: 1em;
    display: none;

    @include screen-medium() {
      display: block;
    }
  }
}

.sl-image .imageContainer > a {
  max-width: 100%;
}

